test/error/VisibilityPrivateConst.fu
static class Foo
{
	const int Bar = 42;
}

public static class Test
{
	public static bool Run()
	{
		return Foo.Bar == 42; //ERROR: Cannot access private member 'Bar'
	}
}
